--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -4,7 +4,7 @@
         <change>Feature - Auto complete of @mentions and #hashtags</change>
         <change>Feature - New account switcher with picture and service icon</change>
         <change>Feature - Added new change log (this is it!)</change>
-        <change>Feature - Added userame to the compose box</change>
+        <change>Feature - Added username to the compose box</change>
         <change>Feature - Image scaling to ensure images are under 1024x1024 (aspect ratio maintained)</change>
         <change>Feature - Mention &amp; DM notifications start on boot</change>
         <change>Feature - Made links to contributors clickable</change>
@@ -15,7 +15,7 @@
         <change>Other - Crittercism upgrade (making it easier for us to see when you have problems)</change>
     </release>
     <release version="1.1.4" versioncode="48">
-        <change>Feature - Image loader retrys the download of image if it's empty.</change>
+        <change>Feature - Image loader retries the download of image if it's empty.</change>
         <change>Feature - Status' passed from the cache to the spotlight to prevent loading</change>
         <change>Feature - Status' updated (by way of favorite of RT) are passed back to the main feed to show this happening</change>
         <change>Feature - Vibration setting for new notifications</change>
@@ -26,7 +26,7 @@
         <change>Fix - Spotlight retweets now function correctly</change>
         <change>Fix - Retweet &amp; Favorite dog ears now show when the event occurs and the cache is updated</change>
         <change>Fix - Correct handling of tweet deletion to remove from the cache, rather than keep displaying</change>
-        <change>Fix - Added better handling of image downloading, with addditional error handling in an attempt to prevent this being a fatal error</change>
+        <change>Fix - Added better handling of image downloading, with additional error handling in an attempt to prevent this being a fatal error</change>
     </release>
     <release version="1.1.3" versioncode="47">
         <change>Feature - Notifications for Direct Messages</change>
