--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -13,6 +13,7 @@
         <change>Fix - DM notifications load into DM lane</change>
         <change>Fix - Retweets of Retweets now correctly stay marked as such</change>
         <change>Fix - Correct handling of media URLs if the domain contains upper case characters</change>
+        <change>Fix - Replys, Attached images &amp; new tweet bar remain during orientation change</change>
         <change>Other - Crittercism upgrade (making it easier for us to see when you have problems)</change>
     </release>
     <release version="1.1.4" versioncode="48">
