--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
+    <release version="1.2.2" versioncode="51">
+        <change>Feature - Added a visual cue when favorite button is pressed</change>
+    </release>
 	<release version="1.2.1" versioncode="50">
         <change>Fix - Links in profile descriptions converted from t.co links</change>
         <change>Fix - Reply when loading profile correction.  Show "Tweet @username"</change>
