--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -2,6 +2,7 @@
 <changelog>
 	<release version="1.2.1" versioncode="51">
         <change>Feature - Added a visual cue when favorite button is pressed</change>
+        <change>Fix - Links are now shown in full, rather than a "display link"</change>
         <change>Fix - Links in profile descriptions converted from t.co links</change>
         <change>Fix - Reply when loading profile correction.  Show "Tweet @username"</change>
     </release>
