--- a/android/libraries/TweetLanesCore/res/layout/tutorial_welcome.xml
+++ b/android/libraries/TweetLanesCore/res/layout/tutorial_welcome.xml
@@ -46,7 +46,7 @@
         </RelativeLayout>
 
         <TextView
-                android:id="@+id/bioTextView"
+                android:id="@+id/bioTextView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="6dp"
