--- a/android/libraries/TweetLanesCore/res/values/arrays.xml
+++ b/android/libraries/TweetLanesCore/res/values/arrays.xml
@@ -8,6 +8,8 @@
         <item>Medium</item>
         <item>Large</item>
         <item>Extra Large</item>
+        <item>Extra Extra Large</item>
+        <item>Supersize</item>
     </string-array>
 
     <string-array name="statussizevalues_list_preference">
