fix for #209  Profile image and service icon only show when you have 3 or more accounts on the same network.  Or accounts on both ADN and Twitter

--- a/android/libraries/TweetLanesCore/res/layout/account_row.xml
+++ b/android/libraries/TweetLanesCore/res/layout/account_row.xml
@@ -33,7 +33,7 @@
     <TextView
             android:id="@+id/accountScreenName"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="48dp"
             android:gravity="center_vertical"
             android:text="ScreenName"
             android:textSize="@dimen/account_row_size"
