--- a/android/libraries/TweetLanesCore/res/values/dimens.xml
+++ b/android/libraries/TweetLanesCore/res/values/dimens.xml
@@ -42,6 +42,7 @@ All Rights Reserved. -->
     <dimen name="image_preview_height">80dp</dimen>
 
     <dimen name="feed_side_padding">0dp</dimen>
-    <dimen name="lane_content_width">0dp</dimen><dimen name="account_row_size">16sp</dimen>
+    <dimen name="lane_content_width">0dp</dimen>
+    <dimen name="account_row_size">16sp</dimen>
 
 </resources>
