--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -3,12 +3,17 @@
 	<release version="1.2.1" versioncode="51">
         <change>Feature - Added a visual cue when favorite button is pressed</change>
         <change>Feature - Added Holo Light Dark Actionbar Theme</change>
+        <change>Feature - Added "Extra Extra Large" and "Supersize" font sizes</change>
+        <change>Feature - Extended the auto complete to match typed text anywhere in username and in full name</change>
 		<change>Fix - Links are now shown in full, rather than a "display link"</change>
         <change>Fix - Links in profile descriptions converted from t.co links</change>
         <change>Fix - Reply when loading profile correction.  Show "Tweet @username"</change>
 		<change>Fix - Correct issues around compose box after loading profile</change>
 		<change>Fix - Use the t.co display url, rather than expanded url.  These are formatted nicer</change>
 		<change>Fix - Fix issue when more than 1 page of tweets.  Fetch only completes when all tweets collected preventing feed jumping</change>
+        <change>Fix - Change the message when you try and send an empty status update</change>
+        <change>Fix - Correct issue with the new tweet bar when orientation changes and account switches</change>
+        <change>Fix - Profile and service icon only show when you use both networks, or have 3 or more accounts</change>
 		<change>Other - Large codebase tidy-up - hopefully small improvement to performance, size and reliability</change>
     </release>
     <release version="1.2.0" versioncode="49">
@@ -66,3 +71,4 @@
         <change>Other - Removed open source code from Twidere, as it was license incompatible with Tweet Lanes</change>
     </release>
 </changelog>
+
