--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -6,6 +6,7 @@
         <change>Feature - Added "Extra Extra Large" and "Supersize" font sizes</change>
         <change>Feature - Extended the auto complete to match typed text anywhere in username and in full name</change>
         <change>Feature - Added ability to remove an attached image by pressing and holding</change>
+        <change>Feature - Added smarter fetching starting with small pages, and incrementing as extra pages required</change>
 		<change>Fix - Links are now shown in full, rather than a "display link"</change>
         <change>Fix - Links in profile descriptions converted from t.co links</change>
         <change>Fix - Reply when loading profile correction.  Show "Tweet @username"</change>
