--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
 	<release version="1.2.1" versioncode="51">
+        <change>Feature - Make the ActionBar title selectable when viewing a profile</change>
         <change>Feature - Added a visual cue when favorite button is pressed</change>
         <change>Feature - Added Holo Light Dark Actionbar Theme</change>
         <change>Feature - Added "Extra Extra Large" and "Supersize" font sizes</change>
