Fix #322 added a "filler" which is present when hiding images on account spinner to padd out the box to the correct size (same as when images are present)

--- a/android/libraries/TweetLanesCore/res/layout/account_row.xml
+++ b/android/libraries/TweetLanesCore/res/layout/account_row.xml
@@ -38,4 +38,11 @@
             android:text="ScreenName"
             android:textSize="@dimen/account_row_size"
             android:layout_marginLeft="10dp"/>
+
+    <TextView
+            android:id="@+id/filler"
+            android:layout_width="1px"
+            android:layout_height="48dp"
+            android:adjustViewBounds="true"
+            />
 </LinearLayout>
