--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
     <release version="1.3.0" versioncode="52">
+        <change>Feature - Added account remover in settings</change>
+        <change>Fix - Corrected a few Crittercism reported force close errors</change>
     </release>
 	<release version="1.2.1" versioncode="51">
         <change>Feature - Make the ActionBar title selectable when viewing a profile</change>
