--- a/android/libraries/TweetLanesCore/res/xml/preferences.xml
+++ b/android/libraries/TweetLanesCore/res/xml/preferences.xml
@@ -21,6 +21,11 @@
                 android:title="@string/title_customizelanes_preference"
                 android:summary="@string/summary_customizelanes_preference"/>
 
+        <Preference
+                android:key="removeaccount_preference"
+                android:title="@string/title_removeaccount_preference"
+                android:summary="@string/summary_removeaccount_preference"/>
+
         <CheckBoxPreference
                 android:key="showtabletmargin_preference"
                 android:title="@string/title_showtabletmargin_preference"
