Added optional auto refresh for #289

--- a/android/libraries/TweetLanesCore/res/xml/preferences.xml
+++ b/android/libraries/TweetLanesCore/res/xml/preferences.xml
@@ -21,11 +21,6 @@
                 android:title="@string/title_customizelanes_preference"
                 android:summary="@string/summary_customizelanes_preference"/>
 
-        <Preference
-                android:key="removeaccount_preference"
-                android:title="@string/title_removeaccount_preference"
-                android:summary="@string/summary_removeaccount_preference"/>
-
         <CheckBoxPreference
                 android:key="showtabletmargin_preference"
                 android:title="@string/title_showtabletmargin_preference"
@@ -106,6 +101,11 @@
     <PreferenceCategory
             android:title="@string/other_preferences">
 
+        <Preference
+                android:key="removeaccount_preference"
+                android:title="@string/title_removeaccount_preference"
+                android:summary="@string/summary_removeaccount_preference"/>
+
         <CheckBoxPreference
                 android:key="volscroll_preference"
                 android:title="@string/title_volscroll_preference"
@@ -124,6 +124,11 @@
                 android:key="downloadimages_preference"
                 android:title="@string/title_downloadimages_preference"
                 android:summary="@string/summary_downloadimages_preference"/>
+
+        <CheckBoxPreference
+                android:key="autorefresh_preference"
+                android:title="@string/title_autorefresh_preference"
+                android:summary="@string/summary_autorefresh_preference"/>
 
 
     </PreferenceCategory>
