--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -2,6 +2,7 @@
 <changelog>
     <release version="1.3.0" versioncode="52">
         <change>Feature - Added account remover in settings</change>
+        <change>Feature - Added optional auto refresh on start</change>
         <change>Fix - Corrected a few Crittercism reported force close errors</change>
         <change>Fix - Corrected issue whereby visible lanes would randomly reset</change>
         <change>Fix - Screen orientation will lock whilst posting to prevent issues with status not posting correctly</change>
