--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -4,6 +4,7 @@
         <change>Feature - Added account remover in settings</change>
         <change>Feature - Mention notification status load into timeline without second refresh</change>
         <change>Feature - Added optional auto refresh on start</change>
+        <change>Feature - Change in app image save location</change>
         <change>Fix - Corrected a few Crittercism reported force close errors</change>
         <change>Fix - Corrected issue whereby visible lanes would randomly reset</change>
         <change>Fix - Screen orientation will lock whilst posting to prevent issues with status not posting correctly</change>
