Update Change log

--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -3,11 +3,12 @@
     <release version="1.3.0" versioncode="52">
         <change>Feature - Added account remover in settings</change>
         <change>Feature - Mention notification status load into timeline without second refresh</change>
-        <change>Feature - Added optional auto refresh on start</change>
+        <change>Feature - Added optional auto refresh on start (but only if it's been more than 2 mins since last refresh)</change>
         <change>Feature - Change in app image save location</change>
         <change>Fix - Corrected a few Crittercism reported force close errors</change>
         <change>Fix - Corrected issue whereby visible lanes would randomly reset</change>
         <change>Fix - Screen orientation will lock whilst posting to prevent issues with status not posting correctly</change>
+        <change>Fix - Better handling of statuses being removed/deleted</change>
     </release>
 	<release version="1.2.1" versioncode="51">
         <change>Feature - Make the ActionBar title selectable when viewing a profile</change>
