--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -9,6 +9,7 @@
         <change>Fix - Corrected issue whereby visible lanes would randomly reset</change>
         <change>Fix - Screen orientation will lock whilst posting to prevent issues with status not posting correctly</change>
         <change>Fix - Better handling of statuses being removed/deleted</change>
+        <change>Fix - DM refresh on send</change>
     </release>
 	<release version="1.2.1" versioncode="51">
         <change>Feature - Make the ActionBar title selectable when viewing a profile</change>
