--- a/android/libraries/TweetLanesCore/res/values/styles.xml
+++ b/android/libraries/TweetLanesCore/res/values/styles.xml
@@ -17,6 +17,7 @@
         <item name="ic_action_camera">@style/ic_action_camera_light</item>
         <item name="ic_action_collapse">@style/ic_action_collapse_light</item>
         <item name="ic_action_expand">@style/ic_action_expand_light</item>
+        <item name="ic_action_reply">@style/ic_action_reply_light</item>
         <item name="ic_action_message">@style/ic_action_message_light</item>
         <item name="ic_action_overflow">@style/ic_action_overflow_light</item>
         <item name="ic_action_rt_on">@style/ic_action_rt_on_light</item>
@@ -49,6 +50,7 @@
         <item name="ic_action_camera">@style/ic_action_camera_dark</item>
         <item name="ic_action_collapse">@style/ic_action_collapse_dark</item>
         <item name="ic_action_expand">@style/ic_action_expand_light</item>
+        <item name="ic_action_reply">@style/ic_action_reply_light</item>
         <item name="ic_action_message">@style/ic_action_message_dark</item>
         <item name="ic_action_overflow">@style/ic_action_overflow_dark</item>
         <item name="ic_action_rt_on">@style/ic_action_rt_on_dark</item>
@@ -82,6 +84,7 @@
         <item name="ic_action_camera">@style/ic_action_camera_dark</item>
         <item name="ic_action_collapse">@style/ic_action_collapse_dark</item>
         <item name="ic_action_expand">@style/ic_action_expand_dark</item>
+        <item name="ic_action_reply">@style/ic_action_reply_dark</item>
         <item name="ic_action_message">@style/ic_action_message_dark</item>
         <item name="ic_action_overflow">@style/ic_action_overflow_dark</item>
         <item name="ic_action_rt_on">@style/ic_action_rt_on_dark</item>
@@ -239,6 +242,14 @@
 
     <style name="ic_action_select_image_dark">
         <item name="android:icon">@drawable/ic_action_select_image_dark</item>
+    </style>
+
+    <style name="ic_action_reply_light">
+        <item name="android:icon">@drawable/ic_action_reply_light</item>
+    </style>
+
+    <style name="ic_action_reply_dark">
+        <item name="android:icon">@drawable/ic_action_reply_dark</item>
     </style>
 
     <style name="ic_action_share_light">
