--- a/android/libraries/TweetLanesCore/res/layout/direct_message_feed_item_received.xml
+++ b/android/libraries/TweetLanesCore/res/layout/direct_message_feed_item_received.xml
@@ -42,6 +42,17 @@
                     android:orientation="horizontal"
                     >
 
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/replyIcon"
+                        android:src="@drawable/ic_action_reply"
+                        android:paddingTop="@dimen/message_item_text_padding_top"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/authorScreenName"
+                        android:layout_alignBottom="@+id/authorScreenName"
+                        android:layout_marginLeft="-10dp"/>
+
                 <TextView
                         android:id="@+id/authorScreenName"
                         android:layout_width="wrap_content"
@@ -70,7 +81,6 @@
                         android:text="2m"
                         android:textSize="12sp"
                         />
-
             </RelativeLayout>
 
 
@@ -88,16 +98,6 @@
                     android:text="Here be a DM. Have you ever noticed that Tuesday comes after Monday? It really, really does. Amazing isn't it? This is a real #truestory"/>
 
         </LinearLayout>
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:id="@+id/replyIcon"
-                android:src="@drawable/ic_action_reply"
-                android:layout_below="@+id/avatar"
-                android:layout_toLeftOf="@+id/message_block"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="false"/>
 
     </RelativeLayout>
 
