--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -6,11 +6,13 @@
         <change>Feature - Added optional auto refresh on start (but only if it's been more than 2 mins since last refresh)</change>
         <change>Feature - Change in app image save location</change>
         <change>Feature - DM added to a cache to cut down on data transfer</change>
+        <change>Feature - Can delete one or multiple direct messages</change>
         <change>Fix - Corrected a few Crittercism reported force close errors</change>
         <change>Fix - Corrected issue whereby visible lanes would randomly reset</change>
         <change>Fix - Screen orientation will lock whilst posting to prevent issues with status not posting correctly</change>
         <change>Fix - Better handling of statuses being removed/deleted</change>
         <change>Fix - DM refresh on send</change>
+        <change>Fix - All DM's downloaded rather than just "newest" in conversation</change>
         <change>Fix - DM last message correctly passed back to the summary page (without need to refresh)</change>
         <change>Fix - Make it clear that the summary DM is actually your reply</change>
     </release>
