Change tweet feed items to have name and handle on seperate lines.  Also have ability to show different variations (Name only, Handle only or both)

--- a/android/libraries/TweetLanesCore/res/values-ru/arrays.xml
+++ b/android/libraries/TweetLanesCore/res/values-ru/arrays.xml
@@ -24,6 +24,18 @@
         <item>Большой</item>
     </string-array>
 
+    <string-array name="displayname_list_preference">
+        <item>Имя и ручки</item>
+        <item>Имя только</item>
+        <item>Ручка только</item>
+    </string-array>
+
+    <string-array name="displayname_values_list_preference">
+        <item>Both</item>
+        <item>Name</item>
+        <item>Handle</item>
+    </string-array>
+
     <string-array name="theme_list_preference">
         <item>Holo Light</item>
         <item>Holo Light w/ Dark Bar</item>
