--- a/android/libraries/TweetLanesCore/res/layout/tweet_feed_item_received.xml
+++ b/android/libraries/TweetLanesCore/res/layout/tweet_feed_item_received.xml
@@ -48,17 +48,18 @@
                 <LinearLayout
                         android:id="@+id/status_header"
                         android:layout_width="fill_parent"
-                        android:layout_height="26dp"
-                        android:layout_toRightOf="@id/avatar"
-                        android:minHeight="@dimen/avatar_width_height_medium"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:weightSum="1">
+                        android:weightSum="1"
+                        android:layout_alignParentEnd="false"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true">
 
                     <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight=".92"
-                            android:orientation="horizontal">
+                            android:orientation="vertical">
 
                         <TextView
                                 android:id="@+id/authorName"
@@ -75,13 +76,11 @@
                                 android:id="@+id/authorScreenName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:paddingLeft="4dp"
-                                android:paddingRight="3dip"
-                                android:paddingTop="@dimen/message_item_text_padding_top"
+                                android:paddingLeft="@dimen/message_item_text_padding_left_right"
                                 android:text="\@rioferdy5"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
                                 android:textColor="@color/text_hairline"
-                                android:textSize="15sp"/>
+                                android:textSize="12sp"/>
                     </LinearLayout>
 
                     <TextView
@@ -91,7 +90,7 @@
                             android:layout_weight=".08"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
-                            android:layout_gravity="center_vertical|right"
+                            android:layout_gravity="center_vertical|right|top"
                             android:gravity="right"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="@color/text_hairline"
