--- a/android/libraries/TweetLanesCore/res/layout/tweet_feed_item_received.xml
+++ b/android/libraries/TweetLanesCore/res/layout/tweet_feed_item_received.xml
@@ -56,7 +56,7 @@
                         android:layout_alignParentLeft="true">
 
                     <LinearLayout
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight=".92"
                             android:orientation="vertical">
