--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -10,7 +10,8 @@
         <change>Feature - Added some xxhdpi images for newer high def devices (Nexus 5)</change>
         <change>Feature - Made UI more optimistic so interactions are show to happen instantly &amp; then only report failures</change>
         <change>Feature - Added Options for showing display names and handles</change>
-        <change>Feature - Added handling for new tweet to open in app</change>
+        <change>Feature - Added handling for new tweet, twitter follow links to open in app</change>
+        <change>Feature - Added handling for profiles to open in app</change>
         <change>Fix - Corrected a few Crittercism reported force close errors</change>
         <change>Fix - Corrected issue whereby visible lanes would randomly reset</change>
         <change>Fix - Screen orientation will lock whilst posting to prevent issues with status not posting correctly</change>
