--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -2,6 +2,7 @@
 <changelog>
     <release version="1.4.0" versioncode="56">
         <change>Feature - Added option to use display urls rather than full URLs</change>
+        <change>Feature - Added auto complete mid status rather than needing to be the last word in compose box</change>
         <change>Fix - Set VolScroll to be defaulted off</change>
         <change>Fix - Update remaining characters as soon as media attached</change>
         <change>Fix - Various errors reported by fatal crashes</change>
